Bug 1448896 - Change some messages to WebRenderParentCommand r=nical